Bug 1236754 - Turn on interposition if e10s is enabled (r=mconley,a=ritu)