toolkit/xre/nsXREDirProvider.cpp
@@ -558,7 +558,8 @@ nsXREDirProvider::GetFiles(const char* aProperty, nsISimpleEnumerator** aResult)
 static void
 RegisterExtensionInterpositions(nsINIParser &parser)
 {
-  if (!mozilla::Preferences::GetBool("extensions.interposition.enabled", false))
+  if (!mozilla::Preferences::GetBool("extensions.interposition.enabled", false) &&
+      !BrowserTabsRemoteAutostart())
     return;
 
   nsCOMPtr<nsIAddonInterposition> interposition =
